--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.65_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.65_translation-de-sabbamitta.json
@@ -22,5 +22,6 @@
   "sn22.65:3.3": "Wenn man in Form Vergnügen findet, ist man von Māra gebunden. ",
   "sn22.65:3.4": "Wenn man kein Vergnügen findet, ist man von dem Bösen befreit. ",
   "sn22.65:3.5": "Wenn man in Gefühl Vergnügen findet … ",
-  "sn22.65:3.6": "Wenn man in Wahrnehmung Vergnügen findet … "
+  "sn22.65:3.6": "Wenn man in Wahrnehmung Vergnügen findet … ",
+  "sn22.65:3.7": "Wenn man in Entscheidungen Vergnügen findet … "
 }
