--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.65_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.65_translation-de-sabbamitta.json
@@ -26,5 +26,6 @@
   "sn22.65:3.7": "Wenn man in Entscheidungen Vergnügen findet … ",
   "sn22.65:3.8": "Wenn man in Bewusstsein Vergnügen findet, ist man von Māra gebunden. ",
   "sn22.65:3.9": "Wenn man kein Vergnügen findet, ist man von dem Bösen befreit. ",
-  "sn22.65:3.10": "So ist die ausführliche Bedeutung dieser meiner kurzen Aussage zu verstehen.“ … "
+  "sn22.65:3.10": "So ist die ausführliche Bedeutung dieser meiner kurzen Aussage zu verstehen.“ … ",
+  "sn22.65:3.11": "Und jener Mönch wurde einer der Vollendeten. "
 }
