--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -49,5 +49,6 @@
   "mn3:3.26": "એટલા માટે ભિક્ષુઓ, ધર્મમાં મારા વારસહાર બનો, માલમિલ્કતમાં નહીં.",
   "mn3:3.27": "મારામાં તમારા માટે એવી અનુકંપા છે:",
   "mn3:3.28": "‘કઇ રીતે સાધકો ધર્મમાં મારા વારસદાર બને, માલમિલ્કતમાં નહીં’”.",
-  "mn3:4.1": "ભગવન્તે એવુ કહ્યું."
+  "mn3:4.1": "ભગવન્તે એવુ કહ્યું.",
+  "mn3:4.2": "એમ કહીને ભગવંત બેઠક પરથી ઉભા થઇને એમની કુટીમાં ગયા."
 }
