--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -50,5 +50,6 @@
   "mn3:3.27": "મારામાં તમારા માટે એવી અનુકંપા છે:",
   "mn3:3.28": "‘કઇ રીતે સાધકો ધર્મમાં મારા વારસદાર બને, માલમિલ્કતમાં નહીં’”.",
   "mn3:4.1": "ભગવન્તે એવુ કહ્યું.",
-  "mn3:4.2": "એમ કહીને ભગવંત બેઠક પરથી ઉભા થઇને એમની કુટીમાં ગયા."
+  "mn3:4.2": "એમ કહીને ભગવંત બેઠક પરથી ઉભા થઇને એમની કુટીમાં ગયા.",
+  "mn3:4.3": "ત્યારે ભગવંતના ગયાની થોડી વાર પછી આયુષ્યમાન સારિપુત્રએ ભિક્ષુઓને સંબોધિને કહ્યું:"
 }
