--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -53,5 +53,6 @@
   "mn3:4.2": "એમ કહીને ભગવંત બેઠક પરથી ઉભા થઇને એમની કુટીમાં ગયા.",
   "mn3:4.3": "ત્યારે ભગવંતના ગયાની થોડી વાર પછી આયુષ્યમાન સારિપુત્રએ ભિક્ષુઓને સંબોધિને કહ્યું:",
   "mn3:4.4": "“આદરણીય ભિક્ષુઓ!”",
-  "mn3:4.5": "“હા આદરણીય”, ભિક્ષુઓએ સારિપુત્રને જવાબ આપ્યો."
+  "mn3:4.5": "“હા આદરણીય”, ભિક્ષુઓએ સારિપુત્રને જવાબ આપ્યો.",
+  "mn3:4.6": "આયુષ્યમાન સારિપુત્રએ એવું કહ્યું:"
 }
