--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -54,5 +54,6 @@
   "mn3:4.3": "ત્યારે ભગવંતના ગયાની થોડી વાર પછી આયુષ્યમાન સારિપુત્રએ ભિક્ષુઓને સંબોધિને કહ્યું:",
   "mn3:4.4": "“આદરણીય ભિક્ષુઓ!”",
   "mn3:4.5": "“હા આદરણીય”, ભિક્ષુઓએ સારિપુત્રને જવાબ આપ્યો.",
-  "mn3:4.6": "આયુષ્યમાન સારિપુત્રએ એવું કહ્યું:"
+  "mn3:4.6": "આયુષ્યમાન સારિપુત્રએ એવું કહ્યું:",
+  "mn3:5.1": "“કઇ રીતે એકાંતમાં રહેતા શિક્ષકના સાધકો એકાંતમાં રહેવાની તાલીમ નથી કરતા અને કઇ રીતે સ"
 }
