--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -56,5 +56,6 @@
   "mn3:4.5": "“હા આદરણીય”, ભિક્ષુઓએ સારિપુત્રને જવાબ આપ્યો.",
   "mn3:4.6": "આયુષ્યમાન સારિપુત્રએ એવું કહ્યું:",
   "mn3:5.1": "“કઇ રીતે એકાંતમાં રહેતા શિક્ષકના સાધકો એકાંતવાસની શિક્ષા નથી ગ્રહણ કરતા, અને કઇ રીતે સાધકો એકાંતવાસની શિક્ષા ગ્રહણ કરે છે”?",
-  "mn3:5.2": "“આદરણીય, આ ભાષણનો અર્થ જાણવા માટે અમે ખુબ દૂરથી પણ સારિપુત્ર પાસે આવીશું."
+  "mn3:5.2": "“આદરણીય, આ ભાષણનો અર્થ જાણવા માટે અમે ખુબ દૂરથી પણ સારિપુત્ર પાસે આવીશું.",
+  "mn3:5.3": "આદરણીય સારિપુત્ર પોતેજ આ વિષયની સ્પષ્ટતા કરે તો સારું."
 }
