--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -59,5 +59,5 @@
   "mn3:5.2": "“આદરણીય, આ ભાષણનો અર્થ જાણવા માટે અમે ખુબ દૂરથી પણ સારિપુત્ર પાસે આવીશું.",
   "mn3:5.3": "આદરણીય સારિપુત્ર પોતેજ આ વિષયની સ્પષ્ટતા કરે તો સારું.",
   "mn3:5.4": "જે પ્રમાણે આદરણીય સારિપુત્ર કહેશે એ જ પ્રમાણે ભિક્ષુઓ યાદ રાખશે.”",
-  "mn3:5.5": " “તો આદરણીયો, સાંભળો, અને સારી રીતે મનમા રાખો, હું કહું છુ”."
+  "mn3:5.5": " “તો આદરણીયો, સાંભળો, અને સારી રીતે મનમા રાખો, હું કહું છું”."
 }
