--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -60,5 +60,6 @@
   "mn3:5.3": "આદરણીય સારિપુત્ર પોતેજ આ વિષયની સ્પષ્ટતા કરે તો સારું.",
   "mn3:5.4": "જે પ્રમાણે આદરણીય સારિપુત્ર કહેશે એ જ પ્રમાણે ભિક્ષુઓ યાદ રાખશે.”",
   "mn3:5.5": " “તો આદરણીયો, સાંભળો, અને સારી રીતે મનમા રાખો, હું કહું છું”.",
-  "mn3:5.6": "“હા આદરણીય”, ભિક્ષુઓએ સારિપુત્રને જવાબ આપ્યો."
+  "mn3:5.6": "“હા આદરણીય”, ભિક્ષુઓએ સારિપુત્રને જવાબ આપ્યો.",
+  "mn3:5.7": "આયુષ્યમાન સારિપુત્રએ એવું કહ્યું:"
 }
