--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -55,7 +55,7 @@
   "mn3:4.4": "“આદરણીય ભિક્ષુઓ!”",
   "mn3:4.5": "“હા આદરણીય”, ભિક્ષુઓએ સારિપુત્રને જવાબ આપ્યો.",
   "mn3:4.6": "આયુષ્યમાન સારિપુત્રએ એવું કહ્યું:",
-  "mn3:5.1": "“કઇ રીતે એકાંતમાં રહેતા શિક્ષકના સાધકો એકાંતવાસની શિક્ષા નથી ગ્રહણ કરતા, અને કઇ રીતે સાધકો એકાંતવાસની શિક્ષા ગ્રહણ કરે છે”?",
+  "mn3:5.1": "“કઇ રીતે એકાંતમાં રહેતા ગુરૂના શિષ્ચો એકાંતવાસની શિક્ષા નથી ગ્રહણ કરતા, અને કઇ રીતે શિષ્યો એકાંતવાસની શિક્ષા ગ્રહણ કરે છે”?",
   "mn3:5.2": "“આદરણીય, આ ભાષણનો અર્થ જાણવા માટે અમે ખુબ દૂરથી પણ સારિપુત્ર પાસે આવીશું.",
   "mn3:5.3": "આદરણીય સારિપુત્ર પોતેજ આ વિષયની સ્પષ્ટતા કરે તો સારું.",
   "mn3:5.4": "જે પ્રમાણે આદરણીય સારિપુત્ર કહેશે એ જ પ્રમાણે ભિક્ષુઓ યાદ રાખશે.”",
