--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -63,5 +63,6 @@
   "mn3:5.6": "“હા આદરણીય”, ભિક્ષુઓએ સારિપુત્રને જવાબ આપ્યો.",
   "mn3:5.7": "આયુષ્યમાન સારિપુત્રએ એવું કહ્યું:",
   "mn3:6.1": "“આદરણીયો, કઇ રીતે એકાંતમાં રહેતા ગુરૂના શિષ્યો એકાંતવાસની શિક્ષા નથી ગ્રહણ કરતા?",
-  "mn3:6.2": "અહીં આદરણીયો, એકાંતમાં રહેતા શિક્ષકના સાધકો એકાંતવાસની શિક્ષા નથી ગ્રહણ કરતા,"
+  "mn3:6.2": "અહીં આદરણીયો, એકાંતમાં રહેતા શિક્ષકના સાધકો એકાંતવાસની શિક્ષા નથી ગ્રહણ કરતા,",
+  "mn3:6.3": "જે વસ્તુઓનો ગુરૂએ ત્ચાગ કરવાનો કહ્યો હોય એનો ત્યાગ નથી કરતા."
 }
