--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -944,7 +944,7 @@
   "pli-tv-kd1:22.2.1": "King Seniya Bimbisāra of Magadha was told: ",
   "pli-tv-kd1:22.2.2": "“Sir, the ascetic Gotama, the Sakyan, who has gone forth from the Sakyan clan, has arrived at Rājagaha and is staying in the cane grove at the Suppatiṭṭha Shrine. ",
   "pli-tv-kd1:22.2.3": "That good Gotama has a fine reputation: ",
-  "pli-tv-kd1:22.2.4": "“‘He is a Buddha, perfected and fully awakened, complete in insight and conduct, happy, knower of the world, supreme leader of trainable people, teacher of gods and humans, awakened, a Buddha. ",
+  "pli-tv-kd1:22.2.4": "‘He is a Buddha, perfected and fully awakened, complete in insight and conduct, happy, knower of the world, supreme leader of trainable people, teacher of gods and humans, awakened, a Buddha. ",
   "pli-tv-kd1:22.2.5": "With his own insight he has seen this world with its gods, its lords of death, and its supreme beings, this society with its monastics and brahmins, its gods and humans, and he makes it known to others. ",
   "pli-tv-kd1:22.2.6": "He has a Teaching that’s good in the beginning, good in the middle, and good in the end. It has a true goal and is well articulated. He sets out a perfectly complete and pure spiritual life.’ ",
   "pli-tv-kd1:22.2.7": "It’s good to see such perfected ones.” ",
