--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -1217,7 +1217,7 @@
   "pli-tv-kd1:25.11.6": "When putting away the robe, he should hold the robe in one hand, wipe the bamboo robe rack or the clothesline with the other, and then put it away by folding the robe over it, making the ends face the wall and the fold face out. ",
   "pli-tv-kd1:25.11.7": "When the preceptor has gotten up, the student should put away the seat and also the foot stool, the foot scraper, and the water for washing the feet. ",
   "pli-tv-kd1:25.11.8": "If the place is dirty, he should sweep it. ",
-  "pli-tv-kd1:25.12.1": "“If the preceptor wants to bathe, the student should prepare a bath. ",
+  "pli-tv-kd1:25.12.1": "If the preceptor wants to bathe, the student should prepare a bath. ",
   "pli-tv-kd1:25.12.2": "If he wants a cold bath, he should prepare that; ",
   "pli-tv-kd1:25.12.3": "if he wants a hot bath, he should prepare that. ",
   "pli-tv-kd1:25.12.4": "If the preceptor wants to take a sauna, the student should knead bath powder, moisten the clay, take a sauna stool, and follow behind his preceptor. After giving the preceptor the sauna stool, receiving his robe, and putting it aside, he should give him the bath powder and the clay. ",
