--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -1231,7 +1231,7 @@
   "pli-tv-kd1:25.13.6": "When he has bathed, he should be the first to come out. He should dry himself and put on his sarong. He should then wipe the water off his preceptor’s body, and he should give him his sarong and then his upper robe. Taking the sauna stool, he should be the first to return. He should prepare a seat, and also set out a foot stool, a foot scraper, and water for washing the feet. He should ask his preceptor if he wants water to drink. ",
   "pli-tv-kd1:25.14.1": "If the preceptor wants him to recite, he should do so. ",
   "pli-tv-kd1:25.14.2": "If the preceptor wants to question him, he should be questioned. ",
-  "pli-tv-kd1:25.14.3": "“If the dwelling where the preceptor is staying is dirty, the student should clean it if he’s able. ",
+  "pli-tv-kd1:25.14.3": "If the dwelling where the preceptor is staying is dirty, the student should clean it if he’s able. ",
   "pli-tv-kd1:25.14.4": "When he’s cleaning the dwelling, he should first take out the bowl and robe and put them aside. ",
   "pli-tv-kd1:25.14.5": "He should take out the sitting mat and the sheet and put them aside. ",
   "pli-tv-kd1:25.14.6": "He should take out the mattress and the pillow and put them aside. ",
