--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -1355,7 +1355,7 @@
   "pli-tv-kd1:26.6.6": "When the preceptor has bathed, he should be the first to come out. He should dry himself and put on his sarong. He should then wipe the water off his student’s body, and he should give him his sarong and then his upper robe. ",
   "pli-tv-kd1:26.6.7": "Taking the sauna stool, he should be the first to return. He should prepare a seat, and also set out a foot stool, a foot scraper, and water for washing the feet. ",
   "pli-tv-kd1:26.6.8": "He should ask his student if he wants water to drink. ",
-  "pli-tv-kd1:26.7.1": "“If the dwelling where the student is staying is dirty, the preceptor should clean it if he’s able. ",
+  "pli-tv-kd1:26.7.1": "If the dwelling where the student is staying is dirty, the preceptor should clean it if he’s able. ",
   "pli-tv-kd1:26.7.2": "When he’s cleaning the dwelling, he should first take out the bowl and robe and put them aside. ",
   "pli-tv-kd1:26.7.3": "He should take out the sitting mat and the sheet and put them aside. ",
   "pli-tv-kd1:26.7.4": "He should take out the mattress and the pillow and put them aside. ",
