--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -1464,7 +1464,7 @@
   "pli-tv-kd1:27.5.4": "If you do, you commit an offense of wrong conduct. ",
   "pli-tv-kd1:27.5.5": "And you should dismiss someone who isn’t conducting himself properly. ",
   "pli-tv-kd1:27.5.6": "If you don’t, you commit an offense of wrong conduct. ",
-  "pli-tv-kd1:27.6.1": "“If a student has five qualities, he should be dismissed: ",
+  "pli-tv-kd1:27.6.1": "If a student has five qualities, he should be dismissed: ",
   "pli-tv-kd1:27.6.2": "he doesn’t have much affection for his preceptor; he doesn’t have much confidence in his preceptor; he doesn’t have much conscience toward his preceptor; he doesn’t have much respect for his preceptor; he hasn’t developed his mind much under his preceptor. ",
   "pli-tv-kd1:27.6.4": "If a student has five qualities, he shouldn’t be dismissed: ",
   "pli-tv-kd1:27.6.5": "he has much affection for his preceptor; he has much confidence in his preceptor; he has much conscience toward his preceptor; he has much respect for his preceptor; he has developed his mind much under his preceptor. ",
