--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -1557,7 +1557,7 @@
   "pli-tv-kd1:30.1.6": "The monks gave him the going forth and the full ordination. ",
   "pli-tv-kd1:30.2.1": "When he had gone forth, that succession of meals came to a stop. ",
   "pli-tv-kd1:30.2.2": "The monks said to him, ",
-  "pli-tv-kd1:30.2.3": "“Come now, let’s walk for almsfood.” ",
+  "pli-tv-kd1:30.2.3": "“Come, let’s walk for alms.” ",
   "pli-tv-kd1:30.2.5": "“I didn’t go forth to walk for alms. ",
   "pli-tv-kd1:30.2.6": "If you give me some, I’ll eat it. If not, I’ll disrobe.” ",
   "pli-tv-kd1:30.2.7": "“But did you go forth for the sake of your stomach?” ",
