--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -1847,7 +1847,7 @@
   "pli-tv-kd1:33.1.40": "The teacher should also do services for his pupil in the water. ",
   "pli-tv-kd1:33.1.41": "When the teacher has bathed, he should be the first to come out. He should dry himself and put on his sarong. He should then wipe the water off his pupil’s body, and he should give him his sarong and then his upper robe. Taking the sauna stool, he should be first to return. He should prepare a seat, and also set out a foot stool, a foot scraper, and water for washing the feet. ",
   "pli-tv-kd1:33.1.42": "He should ask his pupil if he wants water to drink. ",
-  "pli-tv-kd1:33.1.43": "“If the dwelling where the pupil is staying is dirty, the teacher should clean it if he’s able. ",
+  "pli-tv-kd1:33.1.43": "If the dwelling where the pupil is staying is dirty, the teacher should clean it if he’s able. ",
   "pli-tv-kd1:33.1.44": "When he’s cleaning the dwelling, he should first take out the bowl and robe and put them aside. ",
   "pli-tv-kd1:33.1.45": "He should take out the sitting mat and the sheet and put them aside. ",
   "pli-tv-kd1:33.1.46": "He should take out the mattress and the pillow and put them aside. ",
