--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -2116,7 +2116,7 @@
   "pli-tv-kd1:38.7.2": "and he’s pleased when anyone praises the teacher, the views, the beliefs, the persuasion, or the opinions of the religious community he’s left; but he is displeased when anyone praises the Buddha, the Teaching, or the Sangha. ",
   "pli-tv-kd1:38.7.3": "This is the critical factor for someone who has been a monastic of another religion to fail his probation. ",
   "pli-tv-kd1:38.7.5": "When he fails in this way, he should not be given the full ordination. ",
-  "pli-tv-kd1:38.8.1": "“This is how someone who has been a monastic of another religion passes his probation: ",
+  "pli-tv-kd1:38.8.1": "And this is how someone who has been a monastic of another religion passes his probation: ",
   "pli-tv-kd1:38.8.2": "He doesn’t enter the village too early or return too late in the day. ",
   "pli-tv-kd1:38.8.4": "He doesn’t regularly associate with sex workers, widows, single women, _paṇḍakas_, or nuns. ",
   "pli-tv-kd1:38.9.1": "He’s skilled and diligent in the various duties of his fellow monastics, and he has the proper judgment to organize and perform them well. ",
