--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -2125,7 +2125,7 @@
   "pli-tv-kd1:38.10.2": "and he is displeased when anyone praises the teacher, the views, the beliefs, the persuasion, or the opinions of the religious community he’s left; but he’s pleased when anyone praises the Buddha, the Teaching, or the Sangha. ",
   "pli-tv-kd1:38.10.3": "This is the critical factor for someone who has been a monastic of another religion to pass his probation. ",
   "pli-tv-kd1:38.10.5": "When he passes in this way, he should be given the full ordination. ",
-  "pli-tv-kd1:38.11.1": "“If someone who has been a monastic of another religion arrives naked, a robe should be sought through his preceptor. ",
+  "pli-tv-kd1:38.11.1": "If someone who has been a monastic of another religion arrives naked, a robe should be sought through his preceptor. ",
   "pli-tv-kd1:38.11.2": "If he arrives with hair, he should get permission from the Sangha to shave. ",
   "pli-tv-kd1:38.11.3": "But any dreadlocked, fire-worshiping ascetic who comes to be ordained should be given the full ordination without probation. ",
   "pli-tv-kd1:38.11.4": "Why is that? ",
