--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.68_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.68_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn22.68:1.5": "„Verstanden, Gesegneter! Verstanden, Heiliger!“ ",
   "sn22.68:2.1": "„Aber wie verstehst du die ausführliche Bedeutung meiner kurzen Aussage?“ ",
   "sn22.68:2.2": "„Herr, Form ist nicht-selbst – ich sollte das Verlangen nach ihr aufgeben. ",
-  "sn22.68:2.3": "Gefühl ist nicht-selbst … "
+  "sn22.68:2.3": "Gefühl ist nicht-selbst … ",
+  "sn22.68:2.4": "Wahrnehmung ist nicht-selbst … "
 }
