--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.68_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.68_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "sn22.68:3.2": "Es ist gut, dass du die ausführliche Bedeutung meiner kurzen Aussage so verstehst. ",
   "sn22.68:3.3": "Form ist nicht-selbst – du solltest das Verlangen nach ihr aufgeben. ",
   "sn22.68:3.4": "Gefühl ist nicht-selbst … ",
-  "sn22.68:3.5": "Wahrnehmung ist nicht-selbst … "
+  "sn22.68:3.5": "Wahrnehmung ist nicht-selbst … ",
+  "sn22.68:3.6": "Entscheidungen sind nicht-selbst … "
 }
