--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.68_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.68_translation-de-sabbamitta.json
@@ -20,7 +20,7 @@
   "sn22.68:3.4": "Gefühl ist nicht-selbst … ",
   "sn22.68:3.5": "Wahrnehmung ist nicht-selbst … ",
   "sn22.68:3.6": "Entscheidungen sind nicht-selbst … ",
-  "sn22.68:3.7": "Bewusstsein ist nicht-selbst – ich sollte das Verlangen nach ihm aufgeben. ",
+  "sn22.68:3.7": "Bewusstsein ist nicht-selbst – du solltest das Verlangen nach ihm aufgeben. ",
   "sn22.68:3.8": "So ist die ausführliche Bedeutung dieser meiner kurzen Aussage zu verstehen.“ … ",
   "sn22.68:3.9": "Und jener Mönch wurde einer der Vollendeten. "
 }
