--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.69_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.69_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn22.69:1.2": "Da ging ein Mönch zum Buddha … und sagte zu ihm: ",
   "sn22.69:1.3": "„Herr, dass der Buddha mir in kurzer Form eine Dhammaunterweisung gebe. Wenn ich sie gehört habe, werde ich allein leben, zurückgezogen, beflissen, eifrig und entschlossen.“ ",
   "sn22.69:1.4": "„Mönch, gib das Verlangen nach allem auf, was nicht zu einem Selbst gehört.“ ",
-  "sn22.69:1.5": "„Verstanden, Gesegneter! Verstanden, Heiliger!“ "
+  "sn22.69:1.5": "„Verstanden, Gesegneter! Verstanden, Heiliger!“ ",
+  "sn22.69:2.1": "„Aber wie verstehst du die ausführliche Bedeutung meiner kurzen Aussage?“ "
 }
