--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.69_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.69_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn22.69:1.3": "„Herr, dass der Buddha mir in kurzer Form eine Dhammaunterweisung gebe. Wenn ich sie gehört habe, werde ich allein leben, zurückgezogen, beflissen, eifrig und entschlossen.“ ",
   "sn22.69:1.4": "„Mönch, gib das Verlangen nach allem auf, was nicht zu einem Selbst gehört.“ ",
   "sn22.69:1.5": "„Verstanden, Gesegneter! Verstanden, Heiliger!“ ",
-  "sn22.69:2.1": "„Aber wie verstehst du die ausführliche Bedeutung meiner kurzen Aussage?“ "
+  "sn22.69:2.1": "„Aber wie verstehst du die ausführliche Bedeutung meiner kurzen Aussage?“ ",
+  "sn22.69:2.2": "„Herr, Form gehört nicht zu einem Selbst – ich sollte das Verlangen nach ihr aufgeben. "
 }
