--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.69_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.69_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn22.69:1.4": "„Mönch, gib das Verlangen nach allem auf, was nicht zu einem Selbst gehört.“ ",
   "sn22.69:1.5": "„Verstanden, Gesegneter! Verstanden, Heiliger!“ ",
   "sn22.69:2.1": "„Aber wie verstehst du die ausführliche Bedeutung meiner kurzen Aussage?“ ",
-  "sn22.69:2.2": "„Herr, Form gehört nicht zu einem Selbst – ich sollte das Verlangen nach ihr aufgeben. "
+  "sn22.69:2.2": "„Herr, Form gehört nicht zu einem Selbst – ich sollte das Verlangen nach ihr aufgeben. ",
+  "sn22.69:2.3": "Gefühl gehört nicht zu einem Selbst … "
 }
