--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.69_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.69_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn22.69:2.2": "„Herr, Form gehört nicht zu einem Selbst – ich sollte das Verlangen nach ihr aufgeben. ",
   "sn22.69:2.3": "Gefühl gehört nicht zu einem Selbst … ",
   "sn22.69:2.4": "Wahrnehmung gehört nicht zu einem Selbst … ",
-  "sn22.69:2.5": "Entscheidungen gehören nicht zu einem Selbst … "
+  "sn22.69:2.5": "Entscheidungen gehören nicht zu einem Selbst … ",
+  "sn22.69:2.6": "Bewusstsein gehört nicht zu einem Selbst – ich sollte das Verlangen nach ihm aufgeben. "
 }
