--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.69_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.69_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn22.69:2.4": "Wahrnehmung gehört nicht zu einem Selbst … ",
   "sn22.69:2.5": "Entscheidungen gehören nicht zu einem Selbst … ",
   "sn22.69:2.6": "Bewusstsein gehört nicht zu einem Selbst – ich sollte das Verlangen nach ihm aufgeben. ",
-  "sn22.69:2.7": "So verstehe ich die ausführliche Bedeutung dieser kurzen Aussage des Buddha.“ "
+  "sn22.69:2.7": "So verstehe ich die ausführliche Bedeutung dieser kurzen Aussage des Buddha.“ ",
+  "sn22.69:3.1": "„Gut, gut, Mönch! "
 }
