--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.70_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.70_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn22.70:0.1": "Verbundene Lehrreden 22.70 ",
   "sn22.70:0.2": "7. Das Kapitel über die Vollendeten ",
-  "sn22.70:0.3": "Im Erregenden feststecken "
+  "sn22.70:0.3": "Im Erregenden feststecken ",
+  "sn22.70:1.1": "In Sāvatthī. "
 }
