--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.70_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.70_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn22.70:2.2": "„Herr, Form steckt im Erregenden fest – ich sollte das Verlangen nach ihr aufgeben. ",
   "sn22.70:2.3": "Gefühl steckt im Erregenden fest … ",
   "sn22.70:2.4": "Wahrnehmung steckt im Erregenden fest … ",
-  "sn22.70:2.5": "Entscheidungen stecken im Erregenden fest … "
+  "sn22.70:2.5": "Entscheidungen stecken im Erregenden fest … ",
+  "sn22.70:2.6": "Bewusstsein steckt im Erregenden fest – ich sollte das Verlangen nach ihm aufgeben. "
 }
