--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.70_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.70_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn22.70:2.5": "Entscheidungen stecken im Erregenden fest … ",
   "sn22.70:2.6": "Bewusstsein steckt im Erregenden fest – ich sollte das Verlangen nach ihm aufgeben. ",
   "sn22.70:2.7": "So verstehe ich die ausführliche Bedeutung dieser kurzen Aussage des Buddha.“ ",
-  "sn22.70:3.1": "„Gut, gut, Mönch! "
+  "sn22.70:3.1": "„Gut, gut, Mönch! ",
+  "sn22.70:3.2": "Es ist gut, dass du die ausführliche Bedeutung meiner kurzen Aussage so verstehst. "
 }
